chore: begin tuning native flags for gvm latest